--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="me.ondrejnedoma.skolaonlinewidget">
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:label="Škola Online Widget"
         android:name="${applicationName}"
